# microsoft-wwi-demo-backups

./: .gitignore  README.md  WideWorldImporters-2023810-17-20-58.bak  databricks.yml
data_product/: .coveragerc  .env.dist  .flake8  CHANGELOG.md  Dockerfile  Makefile  README.md  data-product-microsoft-wwi.py  databricks.yml  docker-compose.yml  init_product_db.sql  pyproject.toml  requirements.txt
data_product/bundle/databricks-notebooks/data-product-microsoft-wwi/: data-product-microsoft-wwi.py
data_product/databricks-jobs/: data-product-microsoft-wwi.json
data_product/documentation/run_locally/: Ubuntu_22.04.md  Windows_10.md  Windows_11.md
data_product/src/: helpers.py  run_locally.py
data_product/src/data_product_microsoft_wwi/: __init__.py  app.py  configuration.py  helpers.py
data_product/src/data_product_microsoft_wwi/e2e_tests/: e2e.py
data_product/src/data_product_microsoft_wwi/loaders/: __init__.py  calendar.py  common.py  filter.py  readers.py  writers.py
data_product/src/data_product_microsoft_wwi/transformers/: __init__.py  (+12 more)
data_product/src/tests/: __init__.py  conftest.py  helpers.py
raw/: .env.dist  .flake8  .releaserc  CHANGELOG.md  Makefile  README.md  dab-raw-microsoft-wwi.yaml.j2  databricks.yml  docker-compose.yml  enable_cdc.sql  pyproject.toml  requirements.txt  restore_db.sql
raw/databricks-jobs/: raw-microsoft-wwi.json
raw/documentation/run_locally/: Ubuntu_22.04.md  Windows_10.md  Windows_11.md
raw/src/: helpers.py  run_locally.py
raw/src/raw_microsoft_wwi/: app.py
raw/src/raw_microsoft_wwi_fixtures_generator/: app.py
(+119 files in other folders)
