[tool.poetry]
name = "data_product_microsoft_wwi"
version = "1.6.0"
description = "Data product WWI Microsoft loader"
authors = []
readme = 'README.md'

[tool.poetry.scripts]
console = "run_locally:cli"


[tool.poetry.dependencies]
python = "^3.8"
delta-spark = "^1.2.1"
python-dotenv = "^0.20.0"
Deprecated = "^1.2.13"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
click = "^8.1.3"
flake8 = "^5.0.4"
mypy = "^0.971"
types-Deprecated = "^1.2.9"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "./src/tests"
]

#[tool.setuptools.packages.find]
#where = ["src"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
